--- a/.github/workflows/feature_branch_validation.yml
+++ b/.github/workflows/feature_branch_validation.yml
@@ -47,10 +47,47 @@ jobs:
       - name: Install NPM
         run: "npm install -g latest"
 
-      # Install SF CLI
-      - name: Install Salesforce CLI
-        run: "npm install sfdx-cli --global"
 
-      # Ensure SF CLI is updated to latest version
-      - name: Update Salesforce CLI
-        run: "sfdx update"
+      # Install Salesforce CLI
+      - name: 'Install Salesforce CLI'
+        run: |
+            wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
+            mkdir ~/sfdx
+            tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
+            echo "$HOME/sfdx/bin" >> $GITHUB_PATH
+            ~/sfdx/bin/sfdx version
+
+      # install SFDX-Git-Delta plugin - https://github.com/scolladon/sfdx-git-delta
+      - name: 'Installing sfdx git delta'
+        run: | 
+            echo y | sfdx plugins:install sfdx-git-delta
+            sfdx plugins 
+
+      # Install java
+      - name: 'Installing java'
+        run: sudo apt-get install openjdk-8-jdk
+
+      # Install SFDX scanner
+      - name: 'Installing SFDX scanner'
+        run: sfdx plugins:install @salesforce/sfdx-scanner
+
+
+      # We use SFDX Git Delta to create a directory with only the metadata that has changed, this allows us
+      # to deploy only those changes, as opposed to deploying the entire branch. This helps reducing deployment times
+      - name: 'Create delta packages for new, modified or deleted metadata'
+        run: | 
+            mkdir changed-sources
+            sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output changed-sources/ --generate-delta --source force-app/ 
+
+      # Scan the code in the delta directory by using sfdx scanner. Output the results of the scan in a new file
+      # called apexScanResults.sarif
+      - name: 'Scan code'
+        run: |
+            cd changed-sources
+            sfdx scanner:run --format sarif --target './**/' --outfile 'results.html'  
+            cd ..
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: changed-sources/results.html
