--- a/.github/workflows/feature_branch_validation.yml
+++ b/.github/workflows/feature_branch_validation.yml
@@ -2,13 +2,8 @@
 name: Validate PR on integration branch
 
 # Definition when the workflow should run
-on:
-    pull_request:
-      branches: [ main ]
-      # We only care about changes to the force-app directory. This prevents the job from running
-      # when changing non-salesforce files (like thddddis yml file).
-      paths:
-        - 'force-app/**'
+on: [push]
+
             
 
 # Jobs to be executed
