--- a/.github/workflows/feature_branch_validation.yml
+++ b/.github/workflows/feature_branch_validation.yml
@@ -43,7 +43,7 @@ jobs:
                   echo y | sfdx plugins:install sfdx-git-delta
                   sfdx plugins 
 
-            # Install java
+            # Install javasss
             - name: 'Installing java'
               run: sudo apt-get install openjdk-8-jdk
 
